# w8s-astro-mcp

./: !note.md  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE_NOTICE.md  README.md  ROADMAP.md  SECURITY.md  TESTING_MCP.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
data/: config.example.json
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  DESIGN-DECISIONS.md  PHASE-8-PLANNING.md  PROFILE_MANAGEMENT_PLANNING.md  ROADMAP.md  SERVER_REFACTOR_TODO.md  SQLITE_MIGRATION_COMPLETE.md  TESTING_MCP.md  pysweph-migration.md
scripts/: bump_version.py  check_swetest.py  migrate_config_to_sqlite.py  migrate_owner_profile.py  migrate_v0.8_to_v0.9.py
src/w8s_astro_mcp/: __init__.py  __main__.py  config.py  constants.py  database.py  db_helpers.py  server.py  swetest_integration.py  transit_logger.py
src/w8s_astro_mcp/models/: __init__.py  app_settings.py  connection.py  connection_chart.py  connection_house.py  connection_member.py  connection_planet.py  connection_point.py  event.py  event_house.py  event_planet.py  event_point.py  house_system.py  location.py  natal_house.py  natal_planet.py  natal_point.py  profile.py  transit_house.py  transit_lookup.py  transit_planet.py  transit_point.py
src/w8s_astro_mcp/parsers/: __init__.py  swetest.py
src/w8s_astro_mcp/tools/: __init__.py  analysis_tools.py  connection_management.py  event_management.py  profile_management.py  visualization.py
src/w8s_astro_mcp/utils/: __init__.py  connection_calculator.py  db_helpers.py  electional.py  ephemeris.py  geocoding.py  install_helper.py  natal_saver.py  position_utils.py  swetest_integration.py  transit_logger.py
tests/: README_TESTING.md  debug_config.py  debug_house.py  quick_test.py  test_analysis_tools.py  test_config.py  test_config_persistence.py  test_connection_calculator.py  test_connection_db_helpers.py  test_database_models.py.old  test_debug.py  test_entrypoint.py  test_ephemeris.py  test_event_management.py  test_find_house_placements.py  test_geocoding.py  test_house_logic.py  test_house_system.py  test_natal_chart_caching.py  test_natal_point.py  test_parser.py  test_profile_management.py  test_real_world_logic.py  test_server_integration.py  test_smoke_e2e.py  test_swetest_integration.py  test_swetest_integration.py.old  test_swetest_parser.py  test_swetest_real.py
tests/models/: conftest.py  test_connections.py  test_house_system.py  test_house_system_types.py
