[project]
name = "w8s-astro-mcp"
version = "0.8.0"
description = "Personal astrological MCP server — natal charts, transits, aspects, composite & Davison relationship charts, backed by SQLite"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Todd W. Schragg" }
]
keywords = ["mcp", "astrology", "astro", "tarot", "swiss-ephemeris", "natal-chart", "transits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/w8s/w8s-astro-mcp"
Repository = "https://github.com/w8s/w8s-astro-mcp"
Issues = "https://github.com/w8s/w8s-astro-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
w8s-astro-mcp = "w8s_astro_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
