[project]
name = "w8s-astro-mcp"
version = "0.9.1"
description = "Personal astrological MCP server — natal charts, transits, aspects, composite & Davison relationship charts, backed by SQLite"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Todd Waits" }
]
keywords = ["mcp", "astrology", "astro", "tarot", "swiss-ephemeris", "natal-chart", "transits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "sqlalchemy>=2.0.0",
    "pysweph>=2.10.3.3",
]

[project.urls]
Homepage = "https://github.com/w8s/w8s-astro-mcp"
Repository = "https://github.com/w8s/w8s-astro-mcp"
Issues = "https://github.com/w8s/w8s-astro-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
]

[project.scripts]
w8s-astro-mcp = "w8s_astro_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']
